# Radix

./: .codebeatignore  .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  ISSUE_TEMPLATE.md  OPTIONS.md  README.md  Radix.iss  appveyor.yml  index.html
CMake/Visual Studio 15 2017/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Radix.sln  Radix.vcxproj  Radix.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
assets/: License_RUS.txt
assets/Drivers_Universal/: android_winusb.inf
assets/architecture/: Radix.pptx  Radix.vsdx  ~$$Radix.~vsdx
assets/md/: architecture.md
documentation/: Doxyfile
documentation/def/: doxygen.def
documentation/docbook/: _a_d_b__mod_8cpp.xml  _a_d_b__mod_8cpp__dep__incl.md5  _a_d_b__mod_8cpp__incl.md5  _a_d_b__mod_8h.xml  _a_d_b__mod_8h__dep__incl.md5  _a_d_b__mod_8h__incl.md5  _a_d_b__slave_8cpp.xml  _a_d_b__slave_8cpp__dep__incl.md5  _a_d_b__slave_8cpp__incl.md5  _a_d_b__slave_8h.xml  _a_d_b__slave_8h__dep__incl.md5  _a_d_b__slave_8h__incl.md5  _check_agreement_8cpp.xml  _check_agreement_8cpp__dep__incl.md5  _check_agreement_8cpp__incl.md5  _check_agreement_8h.xml  _check_agreement_8h__dep__incl.md5  _check_agreement_8h__incl.md5  _checking_files_8cpp.xml  _checking_files_8cpp__dep__incl.md5  _checking_files_8cpp__incl.md5  _checking_files_8h.xml  _checking_files_8h__dep__incl.md5  _checking_files_8h__incl.md5  _color_8cpp.xml  _color_8cpp__dep__incl.md5  _color_8cpp__incl.md5  _color_8h.xml  _color_8h__dep__incl.md5  _color_8h__incl.md5  _constants_8h.xml  _constants_8h__dep__incl.md5  _constants_8h__incl.md5  _constants_menu_8h.xml  _constants_menu_8h__dep__incl.md5  _constants_menu_8h__incl.md5  _exit_8cpp.xml  _exit_8cpp__dep__incl.md5  _exit_8cpp__incl.md5  _exit_8h.xml  (+123 more)
documentation/html/: _0Cexamples_0Cv_convert_ip_8cpp-example.html  _a_d_b__mod_8cpp.html  _a_d_b__mod_8cpp__incl.map  _a_d_b__mod_8cpp__incl.md5  _a_d_b__mod_8cpp_source.html  _a_d_b__mod_8h.html  _a_d_b__mod_8h__dep__incl.map  _a_d_b__mod_8h__dep__incl.md5  _a_d_b__mod_8h__incl.map  _a_d_b__mod_8h__incl.md5  _a_d_b__mod_8h_source.html  _a_d_b__slave_8cpp.html  _a_d_b__slave_8cpp__incl.map  _a_d_b__slave_8cpp__incl.md5  _a_d_b__slave_8cpp_source.html  _a_d_b__slave_8h.html  _a_d_b__slave_8h__dep__incl.map  _a_d_b__slave_8h__dep__incl.md5  _a_d_b__slave_8h__incl.map  _a_d_b__slave_8h__incl.md5  _a_d_b__slave_8h_source.html  _check_agreement_8cpp.html  _check_agreement_8cpp__incl.map  _check_agreement_8cpp__incl.md5  _check_agreement_8cpp_source.html  _check_agreement_8h.html  _check_agreement_8h__dep__incl.map  _check_agreement_8h_source.html  _check_device_8h_source.html  _check_internet_8h_source.html  _checking_connections_8cpp.html  _checking_connections_8h.html  _checking_connections_8h_source.html  _checking_files_8cpp.html  _checking_files_8cpp__incl.map  _checking_files_8cpp_source.html  _checking_files_8h.html  _checking_files_8h__dep__incl.map  _checking_files_8h__dep__incl.md5  _checking_files_8h_source.html  (+220 more)
documentation/latex/: _0Cexamples_0Cv_convert_ip_8cpp-example.tex  _a_d_b__mod_8cpp.tex  _a_d_b__mod_8cpp__incl.md5  _a_d_b__mod_8h.tex  _a_d_b__mod_8h__dep__incl.md5  _a_d_b__mod_8h__incl.md5  _a_d_b__slave_8cpp.tex  _a_d_b__slave_8cpp__incl.md5  _a_d_b__slave_8h.tex  _a_d_b__slave_8h__dep__incl.md5  _a_d_b__slave_8h__incl.md5  _check_agreement_8cpp.tex  _check_agreement_8cpp__incl.md5  _check_agreement_8h.tex  _check_agreement_8h__dep__incl.md5  _checking_connections_8cpp.tex  _checking_connections_8h.tex  _checking_files_8cpp.tex  _checking_files_8cpp__incl.md5  _checking_files_8h.tex  _checking_files_8h__dep__incl.md5  _color_8cpp.tex  _color_8cpp__incl.md5  _color_8h.tex  _color_8h__dep__incl.md5  _constants_8h.tex  _constants_8h__dep__incl.md5  _constants_8h__incl.md5  _constants_menu_8h.tex  _constants_menu_8h__dep__incl.md5  _constants_menu_8h__incl.md5  _download_8cpp.tex  _download_8cpp__incl.md5  _download_8h.tex  _exit_8cpp.tex  _exit_8cpp__incl.md5  _exit_8h.tex  _exit_8h__dep__incl.md5  _initialization_8cpp.tex  _initialization_8cpp__incl.md5  (+110 more)
documentation/rtf/: _a_d_b__mod_8cpp__incl.md5  _a_d_b__mod_8h__dep__incl.md5  _a_d_b__slave_8cpp__incl.md5  _check_agreement_8h__dep__incl.md5  _checking_files_8cpp__incl.md5  _color_8cpp__incl.md5  _color_8h__dep__incl.md5  _constants_8h__dep__incl.md5  _constants_8h__incl.md5  _constants_menu_8h__dep__incl.md5  _constants_menu_8h__incl.md5  _exit_8cpp__incl.md5  _exit_8h__dep__incl.md5  _initialization_8cpp__incl.md5  _load_scale_8h__dep__incl.md5  _logger_8h__dep__incl.md5  _logger_8h__incl.md5  _logo_8h__dep__incl.md5  _logo_8h__incl.md5  _main_8cpp__incl.md5  _main_menu_8cpp__incl.md5  _menu_8cpp__incl.md5  _menu_8h__dep__incl.md5  _query_menu_8cpp__incl.md5  _query_menu_8h__incl.md5  _settings_8h__dep__incl.md5  _templates_8cpp__incl.md5  _templates_8h__dep__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.rtf  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_aebb8dcc11953d78e620bbef0b9e2183.rtf  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.rtf  dir_c184e51c84f2c3f0345bbc8a0d75d3e1_dep.md5  dir_da5c6b39c0a2f54e57df6799511cd3ab.rtf  examples.rtf  refman.rtf
documentation/xml/: _a_d_b__mod_8cpp.xml  _a_d_b__mod_8h.xml  _a_d_b__slave_8cpp.xml  _a_d_b__slave_8h.xml  _check_agreement_8cpp.xml  _check_agreement_8h.xml  _checking_files_8cpp.xml  _checking_files_8h.xml  _color_8cpp.xml  _color_8h.xml  _constants_8h.xml  _constants_menu_8h.xml  _exit_8cpp.xml  _exit_8h.xml  _initialization_8cpp.xml  _initialization_8h.xml  _items_8cpp.xml  _items_8h.xml  _load_scale_8cpp.xml  _load_scale_8h.xml  _logger_8cpp.xml  (+53 more)
examples/: Operations.cpp  Operations_Initialization.cpp  Unix.cpp  checkingfiles.cpp  color.cpp  constants.h  constantsmenu.cpp  downloadfile_example.cpp  exit.cpp  initialization.cpp  items.cpp  loadscale.cpp  log.cpp  mainmenu.cpp  menu.cpp  querymenu.cpp  radix.cpp  ruleslist.cpp  settings.cpp  templates.cpp  v_convert_ip.cpp  v_download_file.cpp  v_get_ip.cpp  v_url_downloadfile.cpp
src/: Main.cpp  Radix.cpp  Standards.cpp
(+217 files in other folders)
